# one-click-installer

./: CMakeLists.txt  COPYING  README  README.md  VERSION.txt  generate-tarball.sh
playground/parseymp/: .directory  CMakeCache.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake  geany.ymp  ktorrent.ymp  main.cpp  package.cpp  package.h  readymp  repository.cpp  repository.h  sax3.ymp  yakuake.ymp
po/: CMakeLists.txt
po/de/: oneclickinstaller.po
po/fr/: oneclickinstaller.po
po/templates/: oneclickinstaller.pot
src/: CMakeLists.txt  FakeBackend.cpp  FakeBackend.h  PackageBackend.cpp  PackageBackend.h  README  YmpParser.cpp  YmpParser.h  backend.cpp  backend.h  backendoci.cpp  backendoci.h  callbacks.cpp  callbacks.h  checkconflictscreen.h  clientdbus.cpp  clientdbus.h  conflictresolutionscreen.cpp  conflictresolutionscreen.h  dbusadaptor.cpp  dbusadaptor.h  details.cpp  details.h  fakebackend.cpp  fakebackend.h  finallogscreen.cpp  finallogscreen.h  firstscreen.cpp  firstscreen.h  installscreen.cpp  installscreen.h  interfacemain.cpp  keyring.h  keyringcallbacks.cpp  keyringcallbacks.h  main.cpp  mainheader.cpp  mainheader.h  mainwindow.cpp  mainwindow.h  (+38 more)
src/backend/: AbstractBackend.h  CMakeLists.txt  FakeBackend.cpp  FakeBackend.h  YmpParser.cpp  YmpParser.h  kdevelop4.ymp  keyringcallbacks.cpp  keyringcallbacks.h  main.cpp  package.cpp  package.h  repository.cpp  repository.h  xmlparse.cpp  xmlparse.h
src/ui/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  firstscreen.cpp  firstscreen.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_firstscreen.cxx  oneclickui  settings.cpp  settings.h
tests/installtest/: CMakeLists.txt  installtest.cpp  installtest.h
tests/keyringtest/: CMakeLists.txt  keyring.h  keyringtest.cpp  keyringtest.h  repository.cpp  repository.h
tests/parse/: CMakeLists.txt  YmpParser.cpp  YmpParser.h  package.cpp  package.h  parsetest.cpp  parsetest.h  repository.cpp  repository.h
